[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyKDC101"
version = "0.22"
authors = [
  { name="iancynk", email="ian.cynk@posteo.eu" },
]
description = "Functions and examples to control Thorlabs KDC101 through serial commands"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/iancynk/pyKDC101"
"Bug Tracker" = "https://github.com/iancynk/pyKDC101/issues"
